# CargoCut

./: .env  20250202180340_shortUrl_2.sql  Cargo.toml  Dockerfile  README.md  cloudnative_pg_setup.txt  deploy.sh  eks-setup.sh  ingress.yaml  pg_queries.txt  redis-deployment.yaml  redis-external.yaml  redis-test.yaml  redis_cluster.yaml
migrations/: 20250129123711_shortUrl.sql  20250226083541_to_cloud.sql
monitoring/: docker-compose.yml  load-test.js
monitoring/grafana/dashboards/: url_shortner.json
monitoring/prometheus/: prometheus.yml
src/: cron.rs  distributed_filter.rs  errors.rs  main.rs  metrics.rs  models.rs  redis.rs
src/aws/: persistance.rs
