[package]
name = "cargocut"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["runtime-tokio-rustls", "postgres", "uuid","time","chrono"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
nanoid = "0.4"
dotenv = "0.15"
thiserror = "1.0"
chrono = "0.4.39"
time = { version = "0.3.37", features = ["parsing"] }
tokio = { version = "1", features = ["full"] }
tower-http = {version ="0.6.2", features = ["trace"]}
