[package]
name = "cargocut"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
serde = "1.0.217"
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = [
  "runtime-tokio-rustls",
  "postgres",
  "uuid",
  "time",
  "chrono",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
nanoid = "0.4"
dotenv = "0.15"
thiserror = "1.0"
chrono = {version = "0.4.39" , features = ["serde"]}
time = { version = "0.3.37", features = ["parsing"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
qfilter = { version = "0.2.1", features = ["serde"] }
bincode = "1.3.3"
bytes = "1.9.0"
aws-config = "1.5.15"
aws-sdk-s3 = "1.72.0"
redis = { version = "0.28.2", features = [
  "cluster-async",
  "connection-manager",
  "tokio-comp",
] }
